--- a/Task 1/assets/index.html
+++ b/Task 1/assets/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Loop 1 - Step 1</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css" />
-</head>
-<body>
-  <!--
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Loop 1 - Step 1</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <!--
     Welcome to your first asset!
 
     You could've noticed there is a link to Roboto font in the head.
@@ -18,29 +21,33 @@
 
     Good luck and have fun!
   -->
-  <main class="main">
-    <div class="container">
-      <div class="mobile">
-        <img src="img/device.svg" alt="mobile">
-        <h2>M O B I L E</h2>
-        <p>Get notifications about new realeses in our mobile app.
-        </p>
-        <h2>$10/month</h2>
+    <main class="main">
+      <div class="container">
+        <div class="mobile">
+          <img src="img/device.svg" alt="mobile" />
+          <h2>M O B I L E</h2>
+          <p>Get notifications about new real eses in our mobile app.</p>
+          <h2>$10/month</h2>
+        </div>
+        <div class="laptop">
+          <img src="img/laptop.svg" alt="laptop" />
+          <h2>D E S K T O P</h2>
+          <p>
+            Enjoy new episodes on your laptop in browser with our web service,
+            whichsupports all the platforms.
+          </p>
+          <h2>$15/month</h2>
+        </div>
+        <div class="tv">
+          <img src="img/monitor.svg" alt="tv" />
+          <h2>T V</h2>
+          <p>
+            Watch ypur favorite series at home on large screen with our TV
+            application.
+          </p>
+          <h2>$20/month</h2>
+        </div>
       </div>
-      <div class="laptop">
-        <img src="img/laptop.svg" alt="laptop">
-        <h2>D E S K T O P</h2>
-        <p>Enjoy new episodes on your laptop in browser with our web service, whichsupports all the platforms.</p>
-        <h2>$15/month</h2>
-      </div>
-      <div class="tv">
-        <img src="img/monitor.svg" alt="tv">
-        <h2>T V</h2>
-        <p>Watch ypur favorite series at home on large screen with our TV application.</p>
-        <h2>$20/month</h2>
-      </div>
-    </div>
-</main>
-
-</body>
+    </main>
+  </body>
 </html>
