update block, added new images, fields

--- a/Task 2/assets/index.html
+++ b/Task 2/assets/index.html
@@ -13,9 +13,23 @@
   </head>
   <body>
     <div class="main">
-      <div></div>
-      <div></div>
-      <div></div>
+      <div>
+        <h1>PAYMENT METHOD</h1>
+      </div>
+      <div class="variables">
+        <div class="visa">
+          <img src="img/visa.svg" alt="visa icon" />
+          <h2>VISA</h2>
+        </div>
+        <div class="mastercard">
+          <img src="img/mastercard.svg" alt="mastercard icon" />
+          <h2>MASTERCARD</h2>
+        </div>
+        <div class="maestro">
+          <img src="img/maestro.svg" alt="maestro icon" />
+          <h2>MAESTRO</h2>
+        </div>
+      </div>
       <button>NEXT STEP <img src="img/arrow.svg" alt="" /></button>
     </div>
   </body>
