--- a/Task 2/assets/index.html
+++ b/Task 2/assets/index.html
@@ -13,7 +13,12 @@
   </head>
   <body>
     <div class="main">
-      <div>
+      <div class="dots">
+        <div>&#x25CF;</div>
+        <div>&#x25CF;</div>
+        <div>&#x25CF;</div>
+      </div>
+      <div class="payment">
         <h1>PAYMENT METHOD</h1>
       </div>
       <div class="variables">
@@ -24,6 +29,7 @@
         <div class="mastercard">
           <img src="img/mastercard.svg" alt="mastercard icon" />
           <h2>MASTERCARD</h2>
+          <img src="img/check.svg" alt="check" />
         </div>
         <div class="maestro">
           <img src="img/maestro.svg" alt="maestro icon" />
