--- a/Task 2/assets/index.html
+++ b/Task 2/assets/index.html
@@ -14,9 +14,9 @@
   <body>
     <div class="main">
       <div class="dots">
-        <div>&#x25CF;</div>
-        <div>&#x25CF;</div>
-        <div>&#x25CF;</div>
+        <div class="dot_one">&#x25CF;</div>
+        <div class="dot_two">&#x25CF;</div>
+        <div class="dot_three">&#x25CF;</div>
       </div>
       <div class="payment">
         <h1>PAYMENT METHOD</h1>
@@ -29,14 +29,14 @@
         <div class="mastercard">
           <img src="img/mastercard.svg" alt="mastercard icon" />
           <h2>MASTERCARD</h2>
-          <img src="img/check.svg" alt="check" />
+          <img class="check" src="img/check.svg" alt="check" />
         </div>
         <div class="maestro">
           <img src="img/maestro.svg" alt="maestro icon" />
           <h2>MAESTRO</h2>
         </div>
       </div>
-      <button>NEXT STEP <img src="img/arrow.svg" alt="" /></button>
+      <button>NEXT STEP <img src="img/arrow.svg" alt="arrow" /></button>
     </div>
   </body>
 </html>
