added header, icon, paragraph

--- a/Task 3/assets/index.html
+++ b/Task 3/assets/index.html
@@ -12,10 +12,17 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <<<<<<< HEAD
-    <div class=""></div>
-    =======
-    <div class="main"></div>
-    >>>>>>> 75629409ed3ae6368e99ffc993d0e0a7306b3fc4
+    <div class="main">
+      <div class="info">
+        <div class="header">
+          <h1>SimpleWheels</h1>
+          <img src="img/account.svg" alt="profile-icon" />
+          <p>
+            Thanks for your order #2357654, your package will be on it's way
+            shortly.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
