--- a/Task 3/assets/index.html
+++ b/Task 3/assets/index.html
@@ -15,12 +15,26 @@
     <div class="main">
       <div class="info">
         <div class="header">
-          <h1>SimpleWheels</h1>
-          <img src="img/account.svg" alt="profile-icon" />
+          <h1>SimpleWheels <img src="img/account.svg" alt="profile-icon" /></h1>
           <p>
             Thanks for your order #2357654, your package will be on it's way
             shortly.
           </p>
+        </div>
+
+        <div class="price_info">
+          <div class="speed">
+            <h2>Chapeli Vintage Single Speed</h2>
+            <p>$317</p>
+          </div>
+          <div class="gloves">
+            <h2>Casteli Vintage Gel Gloves</h2>
+            <p>$39</p>
+          </div>
+          <div class="total">
+            <h2>Total</h2>
+            <p>$356</p>
+          </div>
         </div>
       </div>
     </div>
