--- a/Task 3/assets/index.html
+++ b/Task 3/assets/index.html
@@ -15,7 +15,14 @@
     <div class="main">
       <div class="info">
         <div class="header">
-          <h1>SimpleWheels <img src="img/account.svg" alt="profile-icon" /></h1>
+          <h1>
+            SimpleWheels
+            <img
+              src="img/account.svg"
+              alt="profile-icon"
+              class="profile_icon"
+            />
+          </h1>
           <p>
             Thanks for your order #2357654, your package will be on it's way
             shortly.
@@ -28,13 +35,14 @@
             <p>$317</p>
           </div>
           <div class="gloves">
-            <h2>Casteli Vintage Gel Gloves</h2>
+            <h2>Casteli Arenberg Gel Gloves</h2>
             <p>$39</p>
           </div>
           <div class="total">
-            <h2>Total</h2>
+            <h2>TOTAL</h2>
             <p>$356</p>
           </div>
+          <img src="img/bicycle.png" alt="bicycle" class="bicycle" />
         </div>
       </div>
     </div>
