--- a/Task 4/assets/index.html
+++ b/Task 4/assets/index.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="main"></div>
+    <div class="main">
+      <div class="main__header">
+        <div class="main__cirle"></div>
+        <p>MARK ZUCKERBERG</p>
+        <img src="img/close.svg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
