--- a/Task 4/assets/index.html
+++ b/Task 4/assets/index.html
@@ -14,9 +14,14 @@
   <body>
     <div class="main">
       <div class="main__header">
-        <div class="main__cirle"></div>
+        <div class="main__circle"></div>
         <p>MARK ZUCKERBERG</p>
         <img src="img/close.svg" alt="" />
+      </div>
+
+      <div class="main__content">
+        <p>10:53</p>
+        <p>Hi, Mark! I Made a new design for Messenger App.</p>
       </div>
     </div>
   </body>
