First messange added

--- a/Task 4/assets/index.html
+++ b/Task 4/assets/index.html
@@ -20,8 +20,10 @@
       </div>
 
       <div class="main__content">
-        <p>10:53</p>
-        <p>Hi, Mark! I Made a new design for Messenger App.</p>
+        <p class="main__content__time">10:53</p>
+        <p class="main__content__messange">
+          Hi, Mark! I Made a new design for Messenger App.
+        </p>
       </div>
     </div>
   </body>
