added first message, change selectors name

--- a/Task 4/assets/index.html
+++ b/Task 4/assets/index.html
@@ -19,11 +19,18 @@
         <img src="img/close.svg" alt="" />
       </div>
 
-      <div class="main__content">
-        <p class="main__content__time">10:53</p>
-        <p class="main__content__messange">
+      <div class="day">TODAY</div>
+
+      <div class="first__message">
+        <p class="first__message__time">10:53</p>
+        <p class="first__message__message">
           Hi, Mark! I Made a new design for Messenger App.
         </p>
+      </div>
+
+      <div class="second__message">
+        <p class="second__message__time">10:57</p>
+        <p class="second__message__message"></p>
       </div>
     </div>
   </body>
