new block added

--- a/Task 4/assets/index.html
+++ b/Task 4/assets/index.html
@@ -30,7 +30,9 @@
 
       <div class="second__message">
         <p class="second__message__time">10:57</p>
-        <p class="second__message__message"></p>
+        <p class="second__message__message">
+          Yo! Send it to my assistant and we'll review it during the year.
+        </p>
       </div>
     </div>
   </body>
