--- a/Task 4/assets/index.html
+++ b/Task 4/assets/index.html
@@ -34,6 +34,26 @@
           Yo! Send it to my assistant and we'll review it during the year.
         </p>
       </div>
+
+      <div class="third__message">
+        <p class="third__message__time">11:03</p>
+        <p class="third__message__message">But Mark...</p>
+      </div>
+
+      <div class="fourth__message">
+        <p class="fourth__message__message">You were blocked by the user.</p>
+      </div>
+
+      <div class="line"></div>
+
+      <div class="send__message">
+        <input
+          class="send__message__input"
+          placeholder="Enter your mesage"
+          type="text"
+        />
+        <button class="send__message__button">SEND</button>
+      </div>
     </div>
   </body>
 </html>
