--- a/Task 4/assets/index.html
+++ b/Task 4/assets/index.html
@@ -49,7 +49,7 @@
       <div class="send__message">
         <input
           class="send__message__input"
-          placeholder="Enter your mesage"
+          placeholder="Enter your message"
           type="text"
         />
         <button class="send__message__button">SEND</button>
