Added second block

--- a/Task 5/assets/index.html
+++ b/Task 5/assets/index.html
@@ -28,6 +28,21 @@
           <p>AMSTERDAM</p>
         </div>
       </div>
+
+      <div class="place">
+        <div class="flight">
+          <h4>FLIGHT</h4>
+          <p>815</p>
+        </div>
+        <div class="gate">
+          <h4>GATE</h4>
+          <p>23G</p>
+        </div>
+        <div class="seat">
+          <h4>SEAT</h4>
+          <p>10F</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
