--- a/Task 5/assets/index.html
+++ b/Task 5/assets/index.html
@@ -43,6 +43,25 @@
           <p>10F</p>
         </div>
       </div>
+
+      <div class="info">
+        <div class="info__name">
+          <h4>PASSENGER</h4>
+          <p>Robert De Niro</p>
+        </div>
+        <div class="info__class">
+          <h4>CLASS</h4>
+          <p>Business</p>
+        </div>
+        <div class="info__date">
+          <h4>DEPARTURE</h4>
+          <p>3:45am, Dec 15</p>
+        </div>
+      </div>
+
+      <div class="qr">
+        <img src="img/qr.svg" alt="qr" />
+      </div>
     </div>
   </body>
 </html>
