Task 6, main content started

--- a/Task 6/assets/index.html
+++ b/Task 6/assets/index.html
@@ -24,6 +24,20 @@
           You won't spend any time confirming those boring emails.
         </p>
       </div>
+      <div class="social">
+        <div class="google">
+          <img src="img/googleplus.svg" alt="google_icon" />
+          <h2>SIGN UP WITH GOOGLE+</h2>
+        </div>
+        <div class="facebook">
+          <img src="img/facebook.svg" alt="facebook_icon" />
+          <h2>SIGN UP WITH FACEBOOK</h2>
+        </div>
+        <div class="twitter">
+          <img src="img/twitter.svg" alt="twitter_icon" />
+          <h2>SIGN UP WITH TWITTER</h2>
+        </div>
+      </div>
     </div>
   </body>
 </html>
