added main block, footer started

--- a/Task 6/assets/index.html
+++ b/Task 6/assets/index.html
@@ -38,6 +38,11 @@
           <h2>SIGN UP WITH TWITTER</h2>
         </div>
       </div>
+      <div class="line"></div>
+      <div class="footer">
+        <h2>You can sign uo with your email address</h2>
+        <h3>SIGN UP WITH EMAIL</h3>
+      </div>
     </div>
   </body>
 </html>
