--- a/Task 6/assets/index.html
+++ b/Task 6/assets/index.html
@@ -43,6 +43,9 @@
         <h2>You can sign uo with your email address</h2>
         <h3>SIGN UP WITH EMAIL</h3>
       </div>
+      <div class="image">
+        <img src="img/side.jpg" alt="" />
+      </div>
     </div>
   </body>
 </html>
