--- a/Task 6/assets/index.html
+++ b/Task 6/assets/index.html
@@ -17,31 +17,33 @@
     You've already finished half of the first loop. Keep going!
   -->
     <div class="root">
-      <div class="header">
-        <h1>Become a member</h1>
-        <p>
-          Use social networks to join us instantly. <br />
-          You won't spend any time confirming those boring emails.
-        </p>
-      </div>
-      <div class="social">
-        <div class="google">
-          <img src="img/googleplus.svg" alt="google_icon" />
-          <h2>SIGN UP WITH GOOGLE+</h2>
+      <div class="main">
+        <div class="header">
+          <h1>Become a member</h1>
+          <p>
+            Use social networks to join us instantly. <br />
+            You won't spend any time confirming those boring emails.
+          </p>
         </div>
-        <div class="facebook">
-          <img src="img/facebook.svg" alt="facebook_icon" />
-          <h2>SIGN UP WITH FACEBOOK</h2>
+        <div class="social">
+          <div class="google">
+            <img src="img/googleplus.svg" alt="google_icon" />
+            <h2>SIGN UP WITH GOOGLE+</h2>
+          </div>
+          <div class="facebook">
+            <img src="img/facebook.svg" alt="facebook_icon" />
+            <h2>SIGN UP WITH FACEBOOK</h2>
+          </div>
+          <div class="twitter">
+            <img src="img/twitter.svg" alt="twitter_icon" />
+            <h2>SIGN UP WITH TWITTER</h2>
+          </div>
         </div>
-        <div class="twitter">
-          <img src="img/twitter.svg" alt="twitter_icon" />
-          <h2>SIGN UP WITH TWITTER</h2>
+        <div class="line"></div>
+        <div class="footer">
+          <h2>You can sign uo with your email address</h2>
+          <button>SIGN UP WITH EMAIL</button>
         </div>
-      </div>
-      <div class="line"></div>
-      <div class="footer">
-        <h2>You can sign uo with your email address</h2>
-        <h3>SIGN UP WITH EMAIL</h3>
       </div>
       <div class="image">
         <img src="img/side.jpg" alt="" />
