--- a/Task 7/assets/index.html
+++ b/Task 7/assets/index.html
@@ -14,9 +14,33 @@
   <body>
     <div class="root">
       <div class="left__sector">
-        <h1>Be a man:</h1>
-        <p>Respect women</p>
-        <div class="line"></div>
+        <div class="header">
+          <h1>Be a man:</h1>
+          <p>Respect women</p>
+          <div class="line"></div>
+        </div>
+        <div class="account">
+          <img src="img/avatar.jpg" alt="" />
+          <p>John Hanson</p>
+        </div>
+      </div>
+      <div class="right__sector">
+        <div class="content">
+          <p>
+            <strong>T</strong>he desire to be respected by someone of the
+            opposite sex is something that runs deep within everyone, even
+            though most people don’t take the time to find someone who truly
+            respects them. It seems like people are just looking for someone to
+            show them the slightest amount of attention, settling for something
+            much less than respect. I am convinced one of the best ways to help
+            any relationship grow is by showing respect. <br />
+            <br />
+            I have come to the conclusion that everyone longs to be respected.
+            What is respect? Respect is showing someone extra special attention,
+            or high regard, based on a desire to show them how highly they are
+            valued.
+          </p>
+        </div>
       </div>
     </div>
   </body>
