7 таск закончил, есть также траблы с текстом

--- a/Task 7/assets/index.html
+++ b/Task 7/assets/index.html
@@ -41,6 +41,19 @@
             valued.
           </p>
         </div>
+        <div class="line__two"></div>
+        <div class="footer">
+          <div class="date">
+            <p>Sat 06 Aug 2017 - <strong>22:14</strong></p>
+          </div>
+          <div class="more">
+            <img src="img/comment.svg" alt="" />
+            <p>23</p>
+            <img src="img/more.svg" alt="" />
+          </div>
+          </div>
+          <div></div>
+        </div>
       </div>
     </div>
   </body>
