изменил дивы на ли, классы

--- a/Task 6/assets/index.html
+++ b/Task 6/assets/index.html
@@ -19,35 +19,33 @@
     <div class="root">
       <div class="main">
         <div class="header">
-          <h1>Become a member</h1>
-          <p>
+          <h1 class="header__text">Become a member</h1>
+          <p class="header__paragraph">
             Use social networks to join us instantly. <br />
             You won't spend any time confirming those boring emails.
           </p>
         </div>
-        <div class="social">
-          <div class="google">
+        <ul class="login__list">
+          <li class="google">
             <img src="img/googleplus.svg" alt="google_icon" />
             <h2>SIGN UP WITH GOOGLE+</h2>
-          </div>
-          <div class="facebook">
+          </li >
+          <li  class="facebook">
             <img src="img/facebook.svg" alt="facebook_icon" />
             <h2>SIGN UP WITH FACEBOOK</h2>
-          </div>
-          <div class="twitter">
+          </li >
+          <li  class="twitter">
             <img src="img/twitter.svg" alt="twitter_icon" />
             <h2>SIGN UP WITH TWITTER</h2>
-          </div>
-        </div>
+          </li >
+        </ul>
         <div class="line"></div>
         <div class="footer">
           <h2>You can sign uo with your email address</h2>
           <button>SIGN UP WITH EMAIL</button>
         </div>
       </div>
-      <div class="image">
-        <img src="img/side.jpg" alt="" />
-      </div>
+      <img class="image" src="img/side.jpg" alt="#" />
     </div>
   </body>
 </html>
