fix классов, дивов

--- a/Task 6/assets/index.html
+++ b/Task 6/assets/index.html
@@ -26,26 +26,26 @@
           </p>
         </div>
         <ul class="login__list">
-          <li class="google">
+          <li class="login__item">
             <img src="img/googleplus.svg" alt="google_icon" />
             <h2>SIGN UP WITH GOOGLE+</h2>
           </li >
-          <li  class="facebook">
+          <li  class="login__item">
             <img src="img/facebook.svg" alt="facebook_icon" />
             <h2>SIGN UP WITH FACEBOOK</h2>
           </li >
-          <li  class="twitter">
+          <li  class="login__item">
             <img src="img/twitter.svg" alt="twitter_icon" />
             <h2>SIGN UP WITH TWITTER</h2>
           </li >
         </ul>
         <div class="line"></div>
         <div class="footer">
-          <h2>You can sign uo with your email address</h2>
-          <button>SIGN UP WITH EMAIL</button>
+          <h2 class="footer__header">You can sign uo with your email address</h2>
+          <button class="login__button">SIGN UP WITH EMAIL</button>
         </div>
       </div>
-      <img class="image" src="img/side.jpg" alt="#" />
+      <img class="side__image" src="img/side.jpg" alt="#" />
     </div>
   </body>
 </html>
