Обновил классы, дивы, оптимизировал

--- a/Task 3/assets/index.html
+++ b/Task 3/assets/index.html
@@ -15,7 +15,7 @@
     <div class="main">
       <div class="info">
         <div class="header">
-          <h1>
+          <h1 class="info__header__header">
             SimpleWheels
             <img
               src="img/account.svg"
@@ -23,24 +23,24 @@
               class="profile_icon"
             />
           </h1>
-          <p>
+          <p class="info__header__paragraph">
             Thanks for your order #2357654, your package will be on it's way
             shortly.
           </p>
         </div>
 
         <div class="price_info">
-          <div class="speed">
-            <h2>Chapeli Vintage Single Speed</h2>
-            <p>$317</p>
+          <div class="price__info__item">
+            <h2 class="price__info__header">Chapeli Vintage Single Speed</h2>
+            <p class="price__info__paragraph">$317</p>
           </div>
-          <div class="gloves">
-            <h2>Casteli Arenberg Gel Gloves</h2>
-            <p>$39</p>
+          <div class="price__info__item">
+            <h2 class="price__info__header">Casteli Arenberg Gel Gloves</h2>
+            <p class="price__info__paragraph">$39</p>
           </div>
-          <div class="total">
-            <h2>TOTAL</h2>
-            <p>$356</p>
+          <div class="price__info__item">
+            <h2 class="price__info__header">TOTAL</h2>
+            <p class="price__info__paragraph">$356</p>
           </div>
           <img src="img/bicycle.png" alt="bicycle" class="bicycle" />
         </div>
