слегка обновил таск 4, по классам

--- a/Task 4/assets/index.html
+++ b/Task 4/assets/index.html
@@ -15,8 +15,8 @@
     <div class="main">
       <div class="main__header">
         <div class="main__circle"></div>
-        <p>MARK ZUCKERBERG</p>
-        <img src="img/close.svg" alt="" />
+        <p class="contact__name">MARK ZUCKERBERG</p>
+        <img class="main__header__close__icon" src="img/close.svg" alt="" />
       </div>
 
       <div class="day">TODAY</div>
