Обновил css, html

--- a/Task 5/assets/index.html
+++ b/Task 5/assets/index.html
@@ -19,48 +19,49 @@
     <div class="root">
       <div class="root__countries">
         <div class="root__countries__departure">
-          <h2>FRA</h2>
-          <p>FRANKFURT</p>
+          <h2 class="root__countries__header">FRA</h2>
+          <p class="root__countries__paragraph">FRANKFURT</p>
         </div>
         <div class="line"></div>
         <div class="root__countries__arrival">
-          <h2>AMS</h2>
-          <p>AMSTERDAM</p>
+          <h2 class="root__countries__header">AMS</h2>
+          <p class="root__countries__paragraph">AMSTERDAM</p>
         </div>
       </div>
 
-      <div class="place">
+      <div class="general__information">
         <div class="flight">
-          <h4>FLIGHT</h4>
-          <p>815</p>
+          <h4 class="general__information__header">FLIGHT</h4>
+          <p class="general__information__paragraph">815</p>
         </div>
         <div class="gate">
-          <h4>GATE</h4>
-          <p>23G</p>
+          <h4 class="general__information__header">GATE</h4>
+          <p class="general__information__paragraph">23G</p>
         </div>
         <div class="seat">
-          <h4>SEAT</h4>
-          <p>10F</p>
+          <h4 class="general__information__header">SEAT</h4>
+          <p class="general__information__paragraph">10F</p>
         </div>
       </div>
 
-      <div class="info">
-        <div class="info__name">
-          <h4>PASSENGER</h4>
-          <p>Robert De Niro</p>
+      <div class="passenger__info">
+        <div class="passenger__info__block">
+          <div class="passenger__info__name">
+            <h4 class="passenger__info__header">PASSENGER</h4>
+            <p class="passenger__info__paragraph">Robert De Niro</p>
+          </div>
+          <div class="info__class">
+            <h4 class="passenger__info__header">CLASS</h4>
+            <p class="passenger__info__paragraph">Business</p>
+          </div>
+          <div class="info__date">
+            <h4 class="passenger__info__header">DEPARTURE</h4>
+            <p class="passenger__info__paragraph">3:45am, Dec 15</p>
+          </div>
         </div>
-        <div class="info__class">
-          <h4>CLASS</h4>
-          <p>Business</p>
+        <div class="qr">
+          <img src="img/qr.svg" alt="qr" />
         </div>
-        <div class="info__date">
-          <h4>DEPARTURE</h4>
-          <p>3:45am, Dec 15</p>
-        </div>
-      </div>
-
-      <div class="qr">
-        <img src="img/qr.svg" alt="qr" />
       </div>
     </div>
   </body>
