Добавил функцию uppercase

--- a/Task 5/assets/index.html
+++ b/Task 5/assets/index.html
@@ -19,27 +19,27 @@
     <div class="root">
       <div class="root__countries">
         <div class="root__countries__departure">
-          <h2 class="root__countries__header">FRA</h2>
-          <p class="root__countries__paragraph">FRANKFURT</p>
+          <h2 class="root__countries__header">fra</h2>
+          <p class="root__countries__paragraph">frankfurt</p>
         </div>
         <div class="line"></div>
         <div class="root__countries__arrival">
-          <h2 class="root__countries__header">AMS</h2>
-          <p class="root__countries__paragraph">AMSTERDAM</p>
+          <h2 class="root__countries__header">ams</h2>
+          <p class="root__countries__paragraph">amsterdam</p>
         </div>
       </div>
 
       <div class="general__information">
         <div class="flight">
-          <h4 class="general__information__header">FLIGHT</h4>
+          <h4 class="general__information__header">flight</h4>
           <p class="general__information__paragraph">815</p>
         </div>
         <div class="gate">
-          <h4 class="general__information__header">GATE</h4>
+          <h4 class="general__information__header">gate</h4>
           <p class="general__information__paragraph">23G</p>
         </div>
         <div class="seat">
-          <h4 class="general__information__header">SEAT</h4>
+          <h4 class="general__information__header">seat</h4>
           <p class="general__information__paragraph">10F</p>
         </div>
       </div>
@@ -47,15 +47,15 @@
       <div class="passenger__info">
         <div class="passenger__info__block">
           <div class="passenger__info__name">
-            <h4 class="passenger__info__header">PASSENGER</h4>
+            <h4 class="passenger__info__header">passenger</h4>
             <p class="passenger__info__paragraph">Robert De Niro</p>
           </div>
           <div class="info__class">
-            <h4 class="passenger__info__header">CLASS</h4>
+            <h4 class="passenger__info__header">class</h4>
             <p class="passenger__info__paragraph">Business</p>
           </div>
           <div class="info__date">
-            <h4 class="passenger__info__header">DEPARTURE</h4>
+            <h4 class="passenger__info__header">departure</h4>
             <p class="passenger__info__paragraph">3:45am, Dec 15</p>
           </div>
         </div>
