--- a/Task 8/assets/index.html
+++ b/Task 8/assets/index.html
@@ -38,6 +38,14 @@
           <button class="left__sector__button">back</button>
         </div>
       </div>
+
+      <div class="right__sector">
+        <div class="countries">
+          <button>netherlands</button>
+          <button>spain</button>
+          <button>france</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
