Countries button added

--- a/Task 8/assets/index.html
+++ b/Task 8/assets/index.html
@@ -41,9 +41,9 @@
 
       <div class="right__sector">
         <div class="countries">
-          <button>netherlands</button>
-          <button>spain</button>
-          <button>france</button>
+          <button class="default">netherlands</button>
+          <button class="default">spain</button>
+          <button class="default">france</button>
         </div>
       </div>
     </div>
