--- a/Task 8/assets/index.html
+++ b/Task 8/assets/index.html
@@ -45,6 +45,13 @@
           <button class="default">spain</button>
           <button class="default">france</button>
         </div>
+        <div class="main__header">
+          <h1 class="header">
+            Visiting the <br />
+            pastelle city
+          </h1>
+          <div class="line"></div>
+        </div>
       </div>
     </div>
   </body>
