--- a/Task 8/assets/index.html
+++ b/Task 8/assets/index.html
@@ -52,6 +52,21 @@
           </h1>
           <div class="line"></div>
         </div>
+          <p class="paragraph">By: <strong> Jerry Henderson</strong>, in Tourism </p>
+
+          <div class="photos__block">
+            <div class="galery__block">
+              <img class="preview__galery" src="img/preview.jpg" alt="galery">
+              <img class="play" src="img/play.svg" alt="play">
+            </div>
+            
+            <div class="all__photos">
+              <p class="photos__block__paragraph">view all photos</p>
+              <img class="photos__block__arrow" src="img/arrow-forward.svg" alt="arrow_forward">
+            </div>
+          </div>
+          <p class="description__block">As you drive into the town from Alicante airport you will pass between two salt lakes – one is blue/green and the other is an impressive pink colour</p>
+        </div>
       </div>
     </div>
   </body>
