--- a/Task 8/assets/index.html
+++ b/Task 8/assets/index.html
@@ -36,6 +36,7 @@
             />
           </svg>
           <button class="left__sector__button">back</button>
+
         </div>
       </div>
 
@@ -58,14 +59,15 @@
             <div class="galery__block">
               <img class="preview__galery" src="img/preview.jpg" alt="galery">
               <img class="play" src="img/play.svg" alt="play">
+              <div class="circle"></div>
+              <div class="all__photos">
+                <p class="photos__block__paragraph">view all photos</p>
+                <img class="photos__block__arrow" src="img/arrow-forward.svg" alt="arrow_forward">
+              </div>
             </div>
-            
-            <div class="all__photos">
-              <p class="photos__block__paragraph">view all photos</p>
-              <img class="photos__block__arrow" src="img/arrow-forward.svg" alt="arrow_forward">
-            </div>
+
+            <p class="description__block">As you drive into the town from Alicante airport you will pass between two salt lakes – one is blue/green and the other is an impressive pink colour</p>
           </div>
-          <p class="description__block">As you drive into the town from Alicante airport you will pass between two salt lakes – one is blue/green and the other is an impressive pink colour</p>
         </div>
       </div>
     </div>
