Добавил варианты оплат, карты

--- a/Task 9/assets/index.html
+++ b/Task 9/assets/index.html
@@ -24,6 +24,39 @@
             />
           </button>
         </div>
+        <div class="wallets__list">
+          <div class="wallets__item">
+            <div class="card__info">
+              <img class="wallets__image" src="img/visa.svg" alt="visa_icon" />
+              <p class="card__number">**** **** **** 2562</p>
+              <p class="card__date">Valid thru: 12/17</p>
+            </div>
+          </div>
+
+          <div class="wallets__item">
+            <div class="card__info">
+              <img
+                class="wallets__image"
+                src="img/mastercard.svg"
+                alt="mastercard"
+              />
+              <p class="card__number">**** **** **** 2562</p>
+              <p class="card__date">Valid thru: 12/17</p>
+            </div>
+          </div>
+
+          <div class="wallets__item">
+            <div class="card__info">
+              <img
+                class="wallets__image"
+                src="img/maestro.svg"
+                alt="maestro_icon"
+              />
+              <p class="card__number">**** **** **** 2562</p>
+              <p class="card__date">Valid thru: 12/17</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
