--- a/Task 9/assets/index.html
+++ b/Task 9/assets/index.html
@@ -24,16 +24,16 @@
             />
           </button>
         </div>
-        <div class="wallets__list">
-          <div class="wallets__item">
+        <ul class="wallets__list">
+          <li class="wallets__item">
             <div class="card__info">
               <img class="wallets__image" src="img/visa.svg" alt="visa_icon" />
               <p class="card__number">**** **** **** 2562</p>
               <p class="card__date">Valid thru: 12/17</p>
             </div>
-          </div>
+          </li>
 
-          <div class="wallets__item">
+          <li class="wallets__item">
             <div class="card__info">
               <img
                 class="wallets__image"
@@ -43,9 +43,9 @@
               <p class="card__number">**** **** **** 2562</p>
               <p class="card__date">Valid thru: 12/17</p>
             </div>
-          </div>
+          </li>
 
-          <div class="wallets__item">
+          <li class="wallets__item">
             <div class="card__info">
               <img
                 class="wallets__image"
@@ -55,8 +55,8 @@
               <p class="card__number">**** **** **** 2562</p>
               <p class="card__date">Valid thru: 12/17</p>
             </div>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
