--- a/Task 9/assets/index.html
+++ b/Task 9/assets/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./scrollbar.css" />
   </head>
   <body>
     <div class="root">
