Начал правый блок, добавил header

--- a/Task 9/assets/index.html
+++ b/Task 9/assets/index.html
@@ -9,8 +9,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./leftsector.css" />
     <link rel="stylesheet" href="./scrollbar.css" />
+    <link rel="stylesheet" href="./rigthsector.css" />
   </head>
   <body>
     <div class="root">
@@ -58,6 +59,15 @@
             </div>
           </li>
         </ul>
+      </div>
+
+      <div class="right__sector">
+        <div class="right__sector__header">
+          <h2 class="right__sector__header__header">Current Balance</h2>
+          <p class="right__sector__total__price">
+            $729. <span class="cents">00</span>
+          </p>
+        </div>
       </div>
     </div>
   </body>
