Добавил первый товар

--- a/Task 9/assets/index.html
+++ b/Task 9/assets/index.html
@@ -68,6 +68,31 @@
             $729. <span class="cents">00</span>
           </p>
         </div>
+        <div class="line__block">
+          <div class="line"></div>
+        </div>
+
+        <div>
+          <ul class="electronic__list">
+            <li class="electronic__list__item">
+              <img
+                class="electronic__list__image"
+                src="img/minus.svg"
+                alt="#"
+              />
+              <div class="circle"></div>
+              <div class="item__list__overview__block">
+                <h2 class="item__list__header">Apple iPhone 7, 128 GB</h2>
+                <p class="item__list__overview">
+                  Electronics #32343424 - 12 July 2015
+                </p>
+              </div>
+              <h3 class="item__list__price">
+                $650. <span class="cents">00</span>
+              </h3>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
