Добавил еще два товара

--- a/Task 9/assets/index.html
+++ b/Task 9/assets/index.html
@@ -91,6 +91,32 @@
                 $650. <span class="cents">00</span>
               </h3>
             </li>
+
+            <li class="electronic__list__item">
+              <img class="electronic__list__image" src="img/plus.svg" alt="#" />
+              <div class="circle"></div>
+              <div class="item__list__overview__block">
+                <h2 class="item__list__header">Funds Added</h2>
+                <p class="item__list__overview">Payment #5435 - 11 July 2015</p>
+              </div>
+              <h3 class="item__list__price">
+                $900. <span class="cents">00</span>
+              </h3>
+            </li>
+
+            <li class="electronic__list__item">
+              <img class="electronic__list__image" src="img/plus.svg" alt="#" />
+              <div class="circle"></div>
+              <div class="item__list__overview__block">
+                <h2 class="item__list__header">Energy Bill</h2>
+                <p class="item__list__overview">
+                  Other #745237423 - 11 July 2015
+                </p>
+              </div>
+              <h3 class="item__list__price">
+                $84. <span class="cents">90</span>
+              </h3>
+            </li>
           </ul>
         </div>
       </div>
