--- a/Task 9/assets/index.html
+++ b/Task 9/assets/index.html
@@ -35,7 +35,7 @@
             </div>
           </li>
 
-          <li class="wallets__item">
+          <li class="wallets__item wallets__item-active">
             <div class="card__info">
               <img
                 class="wallets__image"
