--- a/Task 10/assets/index.html
+++ b/Task 10/assets/index.html
@@ -25,7 +25,7 @@
     and use @import to get them combined in the main.css file.
   --></body>
   <div class="header">
-    <img src="img/logo.svg" alt="#" />
+    <img class="header__logo" src="img/logo.svg" alt="#" />
     <div class="nav">
       <button class="header__button">About</button>
       <button class="header__button">Offers</button>
@@ -36,5 +36,15 @@
         placeholder="How can we help you?"
       />
     </div>
+  </div>
+  <div class="info__block">
+    <h1 class="info__block__header">Freedom calls.</h1>
+    <p class="info__block__text">
+      Answer a call from your surfboard. Ask Siri to send a message. Stream your
+      favorite songs on your run. And do it all while leaving your phone behind.
+      Introducing Apple Watch Series 3 with cellular. Now you have the freedom
+      to go with just your watch
+    </p>
+    <button class="info__block__button">watch the keynote</button>
   </div>
 </html>
